ail/core/aparser.py

import ast as pyast

from os.path import split
from typing import Union

from . import aconfig

from .alex import Token, TokenStream, Lex
from . import asts as ast, test_utils
from .error import error_msg
from .pyast import *
from .tokentype import *

__author__ = 'LaomoBK'

_keywords_uc = (
    'PRINT', 'INPUT',
    'IF', 'THEN', 'BEGIN',
    'END', 'WHILE', 'DO',
    'UNTIL', 'LOOP', 'WEND',
    'FUN', 'IS', 'ELSE', 'ENDIF', 'ELIF', 'LOAD', 'IMPORT',
    'FUNC',
    'STRUCT', 'MOD', 'FOR', 'PROTECTED',
    'ASSERT', 'THROW', 'TRY', 'CATCH', 'FINALLY',
    'XOR', 'MOD',
    'GLOBAL', 'NONLOCAL',
    'EXTENDS', 'AND', 'OR', 'NOT'
)

_end_signs_uc = ('WEND', 'END', 'ENDIF', 'ELSE', 'ELIF', 'CATCH')

_keywords = tuple([x.lower() for x in _keywords_uc])
_end_signs = tuple([x.lower() for x in _end_signs_uc])

_cmp_op = (
    AIL_EQ, AIL_LARGER, AIL_SMALER,
    AIL_LARGER_EQ, AIL_SMALER_EQ,
    AIL_UEQ
)

_inplace_op_dict = {
    AIL_INP_BIN_AND: ('&', ast.BitOpExprAST, True),
    AIL_INP_BIN_OR: ('|', ast.BitOpExprAST, True),
    AIL_INP_DIV: ('/', ast.MuitDivExprAST, True),
    AIL_INP_LSHIFT: ('<<', ast.BitShiftExprAST, True),
    AIL_INP_MOD: ('mod', ast.ModExprAST, False),
    AIL_INP_MULT: ('*', ast.MuitDivExprAST, True),
    AIL_INP_PLUS: ('+', ast.AddSubExprAST, True),
    AIL_INP_RSHIFT: ('>>', ast.BitShiftExprAST, True),
    AIL_INP_SUB: ('-', ast.AddSubExprAST, True),
    AIL_INP_XOR: ('xor', ast.BinXorExprAST, False),
    AIL_INP_POW: ('**', ast.PowerExprAST, False)
}

_literal_names = ('null', 'true', 'false')

_FROM_MAIN = 0
_FROM_FUNC = 1


_class_name_stack = list()


def _make_private_name(name):
    return '$'.join(_class_name_stack)


class Parser:
    def __init__(self):
        self.__filename = '<NO FILE>'
        self.__source = '\n'
        self.__tok_stream = None
        self.__tok_list = None

        self.__tc = 0

        self.__level = 0  # level 0
        self.__parenthesis_level = 0

        self.__pyc_mode = False

    def __mov_tp(self, step=1):
        self.__tc += step

    def __next_tok(self, 
            ignore_newline: bool = False, 
            convert_semi: bool = True, just_next: bool = False) -> Token:
        if just_next:
            self.__tc += 1
            if convert_semi and self.__now_tok.ttype == AIL_SEMI:
                self.__now_tok.ttype = AIL_ENTER
            return

        if self.__parenthesis_level > 0:
            self.__skip_newlines()

        if self.__now_tok.ttype in (AIL_SLBASKET, AIL_MLBASKET):
            self.__parenthesis_level += 1
        elif self.__now_tok.ttype in (AIL_SRBASKET, AIL_MRBASKET) and \
                self.__parenthesis_level > 0:
            self.__parenthesis_level -= 1

        self.__tc += 1

        if convert_semi and self.__now_tok.ttype == AIL_SEMI:
            self.__now_tok.ttype = AIL_ENTER

        if self.__now_tok.ttype == AIL_ENTER and ignore_newline:
            self.__next_tok(ignore_newline, convert_semi)

        if self.__parenthesis_level > 0:
            self.__skip_newlines()

        return self.__tok_stream[self.__tc]

    def __skip_newlines(self):
        while self.__now_tok == '\n':
            self.__next_tok(just_next=True)

    def __peek(self, step=1) -> Token:
        return self.__tok_stream[self.__tc + step]

    def __parse_bin_expr(self) -> ast.AddSubExprAST:
        pass

    @property
    def __now_tok(self) -> Token:
        tok = self.__tok_stream[self.__tc]

        if len(_class_name_stack) > 0 and tok.ttype == AIL_IDENTIFIER \
                and tok.value not in _keywords:
            val = tok.value
            if not self.__pyc_mode and \
                    val[:2] == '__' and val[-2:] != '__' and len(_class_name_stack) > 0:
                tok.value = '%s$%s' % (_make_private_name(val), val)
        return tok

    @property
    def __now_ln(self) -> int:
        try:
            return self.__now_tok.ln
        except AttributeError:
            return -1

    def __tok_is(self, tok: Token, value: str) -> bool:
        return tok.ttype != AIL_STRING and tok.value == value

    def __syntax_error(self, msg=None, ln: int = 0):
        error_msg(
            self.__now_ln if ln <= 0 else ln,
            'SyntaxError%s' % ((': ' if msg else '') + (msg if msg else '')),
            self.__filename, source=self.__source)

    def __expect_newline(self):
        if self.__now_tok.ttype != AIL_ENTER:
            self.__syntax_error('except NEWLINE')

    def __parse_arg_item(self) -> ast.ArgItemAST:
        star = False

        if self.__now_tok.ttype == AIL_MULT:
            self.__next_tok()  # eat '*'
            star = True

        self.__skip_newlines()
        expr = self.__parse_binary_expr()

        return ast.ArgItemAST(expr, star, self.__now_ln)

    def __parse_func_def_arg_list(self) -> ast.ArgListAST:
        ln = self.__now_ln

        alist = []

        has_star = False

        while self.__now_tok.ttype != AIL_SRBASKET:
            self.__skip_newlines()

            a = self.__parse_arg_item()
            if not isinstance(a.expr, ast.CellAST) or  \
                    a.expr.type != AIL_IDENTIFIER:
                self.__syntax_error(ln=a.ln)
            alist.append(a)

            if has_star:
                self.__syntax_error()

            self.__skip_newlines()

            if self.__now_tok.ttype == AIL_SRBASKET:
                break

            if self.__now_tok.ttype != AIL_COMMA:
                self.__syntax_error()

            self.__next_tok()  # eat ','

            self.__skip_newlines()

            has_star = a.star

        self.__next_tok()  # eat ')' 

        return ast.ArgListAST(alist, ln)

    def __parse_arg_list(self) -> ast.ArgListAST:
        alist = []

        if self.__now_tok.ttype != AIL_SRBASKET:
            a = self.__parse_arg_item()
            alist.append(a)
        else:
            return ast.ArgListAST(alist, self.__now_ln)

        while self.__now_tok.ttype == AIL_COMMA:
            self.__next_tok()

            if self.__now_tok.ttype == AIL_SRBASKET:
                break

            a = self.__parse_arg_item()
            alist.append(a)

        return ast.ArgListAST(alist, self.__now_ln)

    def __parse_value_list(self) -> ast.ValueListAST:
        if self.__now_tok.ttype != AIL_IDENTIFIER:
            return self.__syntax_error()

        ida = self.__now_tok.value
        idl = [ida]

        self.__next_tok()

        while self.__now_tok == ',' and self.__now_tok.ttype != AIL_ENTER:
            self.__next_tok()

            if self.__now_tok.ttype != AIL_IDENTIFIER:
                self.__syntax_error()

            idl.append(self.__now_tok.value)

            self.__next_tok()

        return ast.ValueListAST(idl, self.__now_ln)

    def __parse_item_list(self) -> ast.ItemListAST:
        if self.__now_tok.ttype == AIL_MRBASKET:
            return ast.ItemListAST([], self.__now_ln)

        il = []

        while self.__now_tok.ttype != AIL_MRBASKET:
            eitem = self.__parse_binary_expr()

            self.__skip_newlines()

            if eitem is None:
                self.__syntax_error()

            il.append(eitem)

            if self.__now_tok.ttype == AIL_COMMA:
                self.__next_tok()

            self.__skip_newlines()

        return ast.ItemListAST(il, self.__now_ln)

    def __parse_array_expr(self) -> ast.ArrayAST:
        ln = self.__now_ln

        if self.__now_tok.ttype != AIL_MLBASKET:
            self.__syntax_error()

        self.__next_tok()  # eat '['
        self.__skip_newlines()

        if self.__now_tok.ttype == AIL_MRBASKET:
            self.__next_tok()  # eat ']'
            return ast.ArrayAST(ast.ItemListAST([], self.__now_ln), ln)

        items = self.__parse_item_list()

        if self.__now_tok.ttype != AIL_MRBASKET:
            self.__syntax_error()

        self.__next_tok()

        if items is None:
            self.__syntax_error()

        return ast.ArrayAST(items, ln)

    def __parse_map_expr(self) -> ast.MapAST:
        ln = self.__now_ln

        if self.__now_tok.ttype != AIL_LLBASKET:
            self.__syntax_error()

        self.__next_tok(ignore_newline=True)  # eat '{' and NEWLINES

        keys = []
        values = []

        if self.__now_tok.ttype == AIL_LRBASKET:
            self.__next_tok()
            return ast.MapAST(keys, values, ln)
        
        key = self.__parse_binary_expr()
        self.__skip_newlines()

        if self.__now_tok.ttype != AIL_COLON:
            self.__syntax_error()
        
        self.__next_tok()  # eat ':'
        self.__skip_newlines()

        value = self.__parse_binary_expr()
        self.__skip_newlines()

        keys.append(key)
        values.append(value)

        while self.__now_tok.ttype == AIL_COMMA:
            self.__next_tok()
            self.__skip_newlines()

            if self.__now_tok.ttype == AIL_LRBASKET:
                if len(keys) == 0:
                    self.__syntax_error()
                else:
                    break

            key = self.__parse_binary_expr()
            self.__skip_newlines()

            if self.__now_tok.ttype != AIL_COLON:
                self.__syntax_error()
            self.__next_tok()  # eat ':'

            self.__skip_newlines()
            value = self.__parse_binary_expr()
            self.__skip_newlines()

            keys.append(key)
            values.append(value)

        if self.__now_tok.ttype != AIL_LRBASKET:
            self.__syntax_error()

        self.__next_tok()  # eat '}'

        return ast.MapAST(keys, values, ln)

    def __parse_member_access_expr(self, 
                                   set_attr=False, 
                                   try_=False) -> ast.MemberAccessAST:
        ln = self.__now_ln
        left = self.__parse_cell_or_call_expr()

        if left is None:
            self.__syntax_error()

        if self.__now_tok.ttype != AIL_DOT:
            return left

        rl = []

        while self.__now_tok == '.':
            self.__next_tok()  # eat '.'
            ert = self.__parse_cell_or_call_expr()

            if ert is None or type(ert) not in (
                    ast.SubscriptExprAST, ast.CallExprAST, ast.CellAST):
                self.__syntax_error()

            if isinstance(ert, ast.CellAST) and ert.type != AIL_IDENTIFIER:
                self.__syntax_error()

            rl.append(ert)

        if set_attr and type(rl[-1]) not in (ast.SubscriptExprAST, ast.CellAST):
            if try_:
                return None
            self.__syntax_error()

        return ast.MemberAccessAST(left, rl, ln)

    def __parse_cell_or_call_expr(self) -> ast.SubscriptExprAST:
        # in fact, it is for subscript
        ca = self.__parse_low_cell_expr()

        left = ca

        while self.__now_tok.ttype in (AIL_MLBASKET, AIL_SLBASKET):
            nt = self.__now_tok.ttype
            ln = self.__now_ln

            if nt == AIL_MLBASKET:
                self.__next_tok()  # eat '['
                if self.__now_tok == ']':
                    self.__syntax_error()

                expr = self.__parse_binary_expr()

                if self.__now_tok != ']':
                    self.__syntax_error()
                self.__next_tok()  # eat ']'

                left = ast.SubscriptExprAST(left, expr, ln)

            elif nt == AIL_SLBASKET:
                self.__next_tok()  # eat '('
                if self.__now_tok == ')':
                    argl = ast.ArgListAST([], ln)
                else:
                    argl = self.__parse_arg_list()

                self.__next_tok()  # eat ')'

                left = ast.CallExprAST(left, argl, ln)
        return left

    def __parse_low_cell_expr(self) -> ast.ExprAST:
        ln = self.__now_ln

        if self.__now_tok.ttype == AIL_MLBASKET:
            a = self.__parse_array_expr()

            if a is None:
                self.__syntax_error()

            return a
        elif self.__now_tok.ttype == AIL_LLBASKET:
            a = self.__parse_map_expr()

            if a is None:
                self.__syntax_error()

            return a
        elif self.__now_tok == 'fun' or self.__now_tok == 'func':
            ph_lev = self.__parenthesis_level
            self.__parenthesis_level = 0

            expr = self.__parse_func_def_stmt(anonymous_function=True)

            self.__parenthesis_level = ph_lev

            return expr

        if self.__now_tok == '(':
            self.__next_tok()
            expr_or_param = self.__parse_arg_list()

            if self.__now_tok != ')':
                self.__syntax_error()

            self.__next_tok()  # eat ')'

            exp_list = expr_or_param.exp_list
            
            if self.__now_tok.ttype != AIL_RARROW:
                if len(exp_list) != 1 or exp_list[0].star:
                    self.__syntax_error()

                return expr_or_param.exp_list[0].expr

            # now it is lambda expression

            has_star = False

            for item in exp_list:
                if not isinstance(item.expr, ast.CellAST) or \
                        item.expr.type != AIL_IDENTIFIER:
                    self.__syntax_error()
                if has_star:
                    self.__syntax_error()
                has_star = item.star
            
            self.__next_tok()  # eat '->'

            expr = self.__parse_binary_expr()
            return_stmt = ast.ReturnStmtAST(expr, expr.ln)
            block = ast.BlockAST([return_stmt], return_stmt.ln, True)

            return ast.FunctionDefineAST(
                    aconfig.LAMBDA_FUNC_NAME, expr_or_param, block, None, expr.ln)

        nt = self.__now_tok

        if self.__now_tok.ttype == AIL_ENTER:
            self.__syntax_error(ln=self.__now_ln - 1)

        elif self.__now_tok.ttype not in (
                AIL_NUMBER, AIL_STRING, AIL_IDENTIFIER, AIL_SUB) or \
                    nt in _keywords:
            self.__syntax_error()

        name = nt.value  # it can be sub, string, number or identifier

        self.__next_tok()  # eat NAME

        return ast.CellAST(name, nt.ttype, ln)

    def __parse_unary_expr(self) -> ast.UnaryExprAST:
        # AIL 1.2a3: not support '++' and '--' anymore.
        if self.__now_tok.ttype in (AIL_PLUS_PLUS, AIL_SUB_SUB):
            self.__syntax_error('not support \'++\' and \'--\' anymore')

        if self.__now_tok.ttype in (
                AIL_SUB, AIL_WAVE):
            ln = self.__now_ln
            op = self.__now_tok.value
            self.__next_tok()  # eat op

            right = self.__parse_member_access_expr()

            if right is None:
                self.__syntax_error()

            return ast.UnaryExprAST(op, right, ln)

        return self.__parse_member_access_expr()

    def __parse_power_expr(self) -> ast.PowerExprAST:
        ln = self.__now_ln

        left = self.__parse_unary_expr()

        if left is None:
            self.__syntax_error()

        if self.__now_tok != '**':
            return left

        rl = []

        while self.__now_tok == '**':
            self.__next_tok()
            r = self.__parse_unary_expr()
            if r is None:
                self.__syntax_error()
            rl.append(('**', r))
        return ast.PowerExprAST(left, rl, ln)

    def __parse_mod_expr(self) -> ast.ModExprAST:
        ln = self.__now_ln

        left = self.__parse_power_expr()

        if left is None:
            self.__syntax_error()

        if self.__now_tok != 'mod':
            return left

        rl = []

        while self.__now_tok == 'mod':
            self.__next_tok()
            r = self.__parse_power_expr()
            if r is None:
                self.__syntax_error()
            rl.append(('mod', r))
        return ast.ModExprAST(left, rl, ln)

    def __parse_muit_div_expr(self) -> ast.MuitDivExprAST:
        ln = self.__now_ln

        left = self.__parse_mod_expr()

        if left is None:
            self.__syntax_error()

        if self.__now_tok.ttype not in (AIL_MULT, AIL_DIV):
            return left

        left_op = self.__now_tok.value

        rl = []

        while self.__now_tok.ttype in (AIL_MULT, AIL_DIV):
            r_op = self.__now_tok.value
            self.__next_tok()

            r = self.__parse_mod_expr()
            if r is None:
                self.__syntax_error()

            rl.append((r_op, r))

        return ast.MuitDivExprAST(left_op, left, rl, ln)

    def __parse_bin_xor_expr(self) -> ast.BinXorExprAST:
        ln = self.__now_ln

        left = self.__parse_bit_shift_expr()

        if left is None:
            self.__syntax_error()

        if self.__now_tok != '^':
            return left

        rl = []

        while self.__now_tok == '^':
            self.__next_tok()
            r = self.__parse_bit_shift_expr()
            if r is None:
                self.__syntax_error()
            rl.append(('^', r))
        return ast.BinXorExprAST(left, rl, ln)

    def __parse_binary_expr(self) -> ast.BitOpExprAST:
        expr = self.__parse_test_expr()

        return expr

    def __parse_bin_op_expr(self) -> ast.BitOpExprAST:
        ln = self.__now_ln

        left = self.__parse_bin_xor_expr()

        if left is None:
            self.__syntax_error()

        if self.__now_tok.ttype not in (AIL_BIN_OR, AIL_BIN_AND):
            return left

        left_op = self.__now_tok.value

        rl = []

        while self.__now_tok.ttype in (AIL_BIN_OR, AIL_BIN_AND):
            r_op = self.__now_tok.value
            self.__next_tok()

            r = self.__parse_bin_xor_expr()
            if r is None:
                self.__syntax_error()

            rl.append((r_op, r))

        return ast.BitOpExprAST(left_op, left, rl, ln)

    def __parse_bit_shift_expr(self) -> ast.BitShiftExprAST:
        ln = self.__now_ln

        left = self.__parse_add_sub_expr()

        if left is None:
            self.__syntax_error()

        if self.__now_tok.ttype not in (AIL_LSHIFT, AIL_RSHIFT):
            return left

        left_op = self.__now_tok.value

        rl = []

        while self.__now_tok.ttype in (AIL_LSHIFT, AIL_RSHIFT):
            r_op = self.__now_tok.value
            self.__next_tok()

            r = self.__parse_add_sub_expr()
            if r is None:
                self.__syntax_error()

            rl.append((r_op, r))

        return ast.BitShiftExprAST(left_op, left, rl, ln)

    def __parse_add_sub_expr(self) -> ast.AddSubExprAST:
        ln = self.__now_ln

        left = self.__parse_muit_div_expr()

        if left is None:
            self.__syntax_error()

        if self.__now_tok.ttype not in (AIL_PLUS, AIL_SUB):
            return left

        left_op = self.__now_tok.value

        rl = []

        while self.__now_tok.ttype in (AIL_PLUS, AIL_SUB):
            r_op = self.__now_tok.value
            self.__next_tok()

            r = self.__parse_muit_div_expr()
            if r is None:
                self.__syntax_error()

            rl.append((r_op, r))

        return ast.AddSubExprAST(left_op, left, rl, ln)

    def __parse_print_expr(self) -> ast.PrintStmtAST:
        ln = self.__now_ln

        self.__next_tok()  # eat 'PRINT'

        exp = self.__parse_binary_expr()

        if exp is None:
            self.__syntax_error()

        el = [exp]
        
        sep = ','
        if aconfig.OLD_PRINT:
            sep = ';'

        while self.__now_tok == sep:
            self.__next_tok()
            e = self.__parse_binary_expr()

            if e is None:
                self.__syntax_error()

            el.append(e)

        self.__expect_newline()

        return ast.PrintStmtAST(el, ln)

    def __parse_input_expr(self) -> ast.InputStmtAST:
        ln = self.__now_ln

        self.__next_tok()  # eat 'INPUT'

        msg = self.__parse_binary_expr()

        if msg is None:
            self.__syntax_error()

        if self.__now_tok != ';':
            return ast.InputStmtAST(
                msg, ast.ValueListAST([], self.__now_ln), self.__now_ln)

        if self.__next_tok().ttype == AIL_IDENTIFIER:
            vl = self.__parse_value_list()
        else:
            vl = ast.ValueListAST([], self.__now_ln)

        self.__expect_newline()

        return ast.InputStmtAST(msg, vl, ln)

    def __parse_assign_expr(self) -> ast.AssignExprAST:
        ln = self.__now_ln
        left = self.__parse_bin_op_expr()

        if left is None:
            self.__syntax_error()

        ttype = self.__now_tok.ttype
        
        if ttype != AIL_ASSI and \
                (ttype < AIL_INP_PLUS or ttype > AIL_INP_BIN_AND) and \
                ttype != AIL_INP_POW:
            return left
        
        # check left is valid or not
        if type(left) not in (ast.MemberAccessAST,
                              ast.CellAST, ast.SubscriptExprAST):
            self.__syntax_error(ln=left.ln)

        # check cell is valid or not
        if isinstance(left, ast.CellAST):
            if left.value in _literal_names:
                self.__syntax_error('cannot assign to %s' % left.value, left.ln)
            elif left.type in (AIL_NUMBER, AIL_STRING):
                self.__syntax_error('cannot assign to literal', left.ln)

        self.__next_tok()
        r = self.__parse_bin_op_expr()
        if r is None:
            self.__syntax_error()

        if ttype in range(AIL_INP_PLUS, AIL_INP_BIN_AND + 1) or \
                ttype == AIL_INP_POW:
            r = self.__convert_inplace_assign_expr_for_right(
                    left, r, ttype, self.__now_ln)

        return ast.AssignExprAST(left, r, ln)

    def __convert_inplace_assign_expr_for_right(
            self, left, right, ttype, ln) -> ast.ExprAST:
        op_str, op_ast, need_op_str = _inplace_op_dict.get(ttype)

        if need_op_str:
            arg = (op_str, left, [[op_str, right]], ln)
        else:
            arg = (left, [[op_str, right]], ln)

        return op_ast(*arg)

    def __parse_assign_expr0(self) -> ast.DefineExprAST:
        n = self.__now_tok.value
        self.__next_tok()
        self.__next_tok()

        v = self.__parse_binary_expr()

        return ast.DefineExprAST(n, v, self.__now_ln)

    def __parse_comp_test_expr(self) -> ast.CmpTestAST:
        ln = self.__now_ln

        left = self.__parse_assign_expr()

        if left is None:
            self.__syntax_error()

        if self.__now_tok.ttype not in _cmp_op:
            return left

        rl = []

        while self.__now_tok.ttype in _cmp_op:
            now_op = self.__now_tok.value
            self.__next_tok()  # eat cmp op
            r = self.__parse_assign_expr()

            if r is None:
                self.__syntax_error()

            rl.append((now_op, r))

        return ast.CmpTestAST(left, rl, ln)

    def __parse_not_test_expr(self) -> ast.NotTestAST:
        if self.__now_tok == 'not':
            self.__next_tok()  # eat 'not'
            expr = self.__parse_comp_test_expr()

            return ast.NotTestAST(expr, self.__now_ln)
        return self.__parse_comp_test_expr()

    def __parse_and_test_expr(self) -> ast.AndTestAST:
        left = self.__parse_not_test_expr()

        if left is None:
            self.__syntax_error()

        if self.__now_tok != 'and':
            return left

        rl = []

        while self.__now_tok == 'and':
            self.__next_tok()  # eat 'and'
            r = self.__parse_not_test_expr()

            if r is None:
                self.__syntax_error()

            rl.append(r)

        return ast.AndTestAST(left, rl, self.__now_ln)

    def __parse_or_test_expr(self) -> ast.OrTestAST:
        left = self.__parse_and_test_expr()

        if left is None:
            self.__syntax_error()

        if self.__now_tok != 'or':
            return left

        rl = []

        while self.__now_tok == 'or':
            self.__next_tok()  # eat 'or'
            r = self.__parse_and_test_expr()

            if r is None:
                self.__syntax_error()

            rl.append(r)

        return ast.OrTestAST(left, rl, self.__now_ln)

    def __parse_test_expr(self) -> ast.TestExprAST:
        t = self.__parse_or_test_expr()

        if type(t) not in (
                ast.AndTestAST, ast.OrTestAST, ast.NotTestAST, ast.CmpTestAST):
            return t

        if t is None:
            self.__syntax_error()

        return ast.TestExprAST(t, self.__now_ln)

    def __parse_new_else_elif_block(self, test: ast.TestExprAST,
                                    if_block: ast.BlockAST,
                                    else_block: ast.BlockAST,
                                    ln: int) -> ast.IfStmtAST:
        elif_list = []
        
        self.__skip_newlines()

        if self.__now_tok.value not in ('else', 'elif') :
            return ast.IfStmtAST(test, if_block, elif_list, else_block, ln)

        while self.__now_tok.ttype != AIL_EOF:
            self.__skip_newlines()
            if self.__now_tok == 'else':
                self.__skip_newlines()
                self.__next_tok(ignore_newline=True)  # eat 'else'
                else_block = self.__parse_block()
                if else_block is None:
                    self.__syntax_error()
                break
            
            elif self.__now_tok == 'elif':
                self.__next_tok()  # eat 'elif'
                elif_test = self.__parse_test_expr()

                if elif_test is None:
                    self.__syntax_error()

                elif_block = self.__parse_block()

                if elif_block is None:
                    self.__syntax_error()

                elif_list.append(
                    ast.IfStmtAST(elif_test, elif_block, [], None, ln))

            else:
                break
            
        return ast.IfStmtAST(test, if_block, elif_list, else_block, ln)

    def __parse_if_else_expr0(self) -> ast.IfStmtAST:
        ln = self.__now_ln
        self.__next_tok()  # eat 'if'

        if_test = self.__parse_test_expr()

        if if_test is None:
            self.__syntax_error()

        is_new_block = self.__now_tok.ttype == AIL_LLBASKET

        if self.__now_tok != 'then' and not is_new_block:
            self.__syntax_error()

        if not is_new_block:
            self.__next_tok()  # eat 'then'

        if_block = self.__parse_block(for_if_else=True)
        else_block = ast.BlockAST([], self.__now_ln)
        elif_list = []

        if is_new_block:
            return self.__parse_new_else_elif_block(if_test, if_block, else_block, ln)

        while self.__now_tok.ttype != AIL_EOF:
            if self.__now_tok == 'else':
                self.__next_tok()  # eat 'else'
                else_block = self.__parse_block(for_if_else=True)

                if else_block is None:
                    self.__syntax_error()

                if self.__now_tok == 'endif':
                    self.__next_tok()  # eat 'endif'
                    return ast.IfStmtAST(
                        if_test, if_block, elif_list, else_block, ln)
                else:
                    self.__syntax_error()

            elif self.__now_tok == 'elif':
                self.__next_tok()  # eat 'elif'
                elif_test = self.__parse_test_expr()

                if elif_test is None:
                    self.__syntax_error()

                elif_block = self.__parse_block(for_if_else=True)

                if elif_block is None:
                    self.__syntax_error()

                elif_list.append(
                    ast.IfStmtAST(elif_test, elif_block, [], None, ln))

            elif self.__now_tok == 'endif':
                self.__next_tok()  # eat 'endif'
                self.__expect_newline()
                return ast.IfStmtAST(
                    if_test, if_block, elif_list, else_block, ln)

            else:
                self.__syntax_error()

    def __parse_if_else_expr(self) -> ast.IfStmtAST:
        base_tree = self.__parse_if_else_expr0()

        if len(base_tree.elif_list) == 0:
            return base_tree

        elif_list = base_tree.elif_list

        last_if_else_block = elif_list.pop()
        last_if_else_block.else_block = base_tree.else_block
        base_tree.else_block = None

        for elif_block in elif_list[::-1]:
            elif_block.else_block = ast.BlockAST([last_if_else_block], self.__now_ln)
            last_if_else_block = elif_block

        base_tree.else_block = ast.BlockAST([last_if_else_block], self.__now_ln)
        base_tree.elif_list = []

        return base_tree

    def __parse_while_expr(self) -> ast.WhileStmtAST:
        ln = self.__now_ln
        self.__next_tok()  # eat 'while'

        test = self.__parse_test_expr()

        if test is None:
            self.__syntax_error()

        block = self.__parse_block('then', 'wend',
                                   'while block should starts with \'then\'',
                                   "while block should ends with 'wend'")

        if block is None:
            self.__syntax_error()

        if not block.new:
            self.__expect_newline()

        return ast.WhileStmtAST(test, block, ln)

    def __parse_assign_expr_list(self) -> ast.AssignExprListAST:
        f = self.__parse_assign_expr()
        if not isinstance(f, ast.AssignExprAST):
            self.__syntax_error()

        el = [f]

        while self.__now_tok == ',':
            self.__next_tok()  # eat ','
            e = self.__parse_assign_expr()
            if not isinstance(e, ast.AssignExprAST):
                self.__syntax_error()
            el.append(e)

        return ast.AssignExprListAST(el, self.__now_ln)

    def __parse_binary_expr_list(self) -> ast.BinaryExprListAST:
        f = self.__parse_binary_expr()

        el = [f]

        while self.__now_tok == ',':
            self.__next_tok()  # eat ','
            e = self.__parse_binary_expr()
            if e is None:
                self.__syntax_error()
            el.append(e)

        return ast.BinaryExprListAST(el, self.__now_ln)

    def __parse_new_for_stmt(self, from_classic=False) -> ast.ForStmtAST:
        if not from_classic and self.__now_tok != 'for':
            self.__syntax_error()

        ln = self.__now_ln

        if not from_classic:
            self.__next_tok()  # eat 'for'

        init: ast.AssignExprListAST = ast.AssignExprListAST([], ln)
        test = None
        update: ast.BinaryExprListAST = ast.AssignExprListAST([], ln)

        if self.__now_tok == '{' or self.__now_tok == 'then':
            body = self.__parse_block()
            return ast.WhileStmtAST(ast.CellAST('1', AIL_NUMBER, ln), body, ln)

        if self.__now_tok != ';':
            init = self.__parse_binary_expr_list()
            if len(init.expr_list) == 1 and \
                    (self.__now_tok == '{' or self.__now_tok == 'then'):
                body = self.__parse_block()
                return ast.WhileStmtAST(init.expr_list[0], body, ln)
            # compatible with classic for.
            init = ast.AssignExprListAST(init.expr_list, ln)

            if self.__now_tok != ';':
                self.__syntax_error()
            self.__next_tok()   # eat ';'
        else:
            self.__next_tok()  # eat ';'

        if self.__now_tok != ';':
            test = self.__parse_test_expr()
            if self.__now_tok != ';':
                self.__syntax_error()

            self.__next_tok()
        else:
            self.__next_tok()

        if self.__now_tok != '{' and self.__now_tok != 'then':
            update = self.__parse_binary_expr_list()
        
        body = self.__parse_block()

        return ast.ForStmtAST(init, test, update, body, ln)

    def __parse_for_expr(self) -> ast.ForStmtAST:
        if self.__now_tok != 'for':
            self.__syntax_error()

        if self.__next_tok() != '(':
            return self.__parse_new_for_stmt(True)

        self.__next_tok()  # eat '('

        mt = [None, None, None]
        pt = (self.__parse_assign_expr_list,
              self.__parse_test_expr,
              self.__parse_binary_expr_list)
        ct = (ast.AssignExprListAST,
              None,
              ast.BinaryExprListAST)
        dt = (';', ';', ')')

        for i in range(3):
            if self.__now_tok == dt[i]:
                if ct[i] is not None:
                    mt[i] = ct[i]([], self.__now_ln)
                self.__next_tok()
            else:
                mt[i] = pt[i]()

                if self.__now_tok != dt[i]:
                    self.__syntax_error()
                self.__next_tok()

        initl, test, binl = mt

        forb = self.__parse_block()
        if not forb.new:
            self.__expect_newline()

        return ast.ForStmtAST(initl, test, binl, forb, self.__now_ln)

    def __parse_do_loop_expr(self) -> ast.DoLoopStmtAST:
        ln = self.__now_ln

        new_block_style = False

        if self.__peek(1).ttype != AIL_LLBASKET:
            block = self.__parse_block('do', 'loop',
                                       'do loop statement should starts with \'do\'',
                                       "do loop statement should ends with 'until'")
        else:
            new_block_style = True
            self.__next_tok()  # eat 'do'
            block = self.__parse_block()

        if block is None:
            self.__syntax_error()

        if new_block_style:
            if self.__now_tok != 'loop':
                self.__syntax_error()
            self.__next_tok()  # eat 'loop'

        if self.__now_tok != 'until':
            self.__syntax_error()

        self.__next_tok()  # eat until

        test = self.__parse_test_expr()

        self.__expect_newline()

        return ast.DoLoopStmtAST(test, block, ln)

    def __parse_struct_def_stmt(self) -> ast.StructDefineAST:
        if self.__now_tok != 'struct':
            self.__syntax_error()

        ln = self.__now_ln

        self.__next_tok()  # eat 'struct'

        if self.__now_tok.ttype != AIL_IDENTIFIER:
            self.__syntax_error()

        name = self.__now_tok.value
        self.__next_tok()  # eat name

        new_block_style = False

        start_tok = 'is'
        end_tok = 'end'
